# LiR_Kernel

./: .gitignore  CMakeLists.txt  README.md
clion_lkm_dev_advanced/: CMakeLists.txt  Makefile  crypto_function.c  ip_route_input_noref_without_cache.c  ip_route_output_flow_without_cache.c  lir_bloom_filter.c  lir_data_structure.c  lir_interface_table_structure.c  lir_routing_table_structure.c  mac_lir_ip_output.c  netlink_handler.c  netlink_server.c  network_ip_rcv.c  network_lir_header.c  network_lir_make_skb.c  network_lir_rcv.c  network_lir_send_check.c  support_hook_functions.c  support_resolve_function_address.c  transport_lir_udp_sendmsg.c
clion_lkm_dev_advanced/headers/: crypto_function.h  ip_route_input_noref_without_cache.h  ip_route_output_flow_without_cache.h  lir_data_structure.h  mac_lir_ip_output.h  netlink_handler.h  netlink_server.h  network_ip_rcv.h  network_lir_header.h  (+8 more)
clion_lkm_dev_advanced_ICING/: CMakeLists.txt  Makefile  crypto_function.c  lir_routing_table_structure.c  netlink_handler.c  network_ip_rcv.c  network_lir_header.c  network_lir_make_skb.c  network_lir_rcv.c  rebuild.sh  support_tools.c  transport_lir_udp_send_skb.c  transport_lir_udp_sendmsg.c
clion_lkm_dev_advanced_OPT/: .network_opt_path_table.o.d  CMakeLists.txt  Makefile  crypto_function.c  lir_data_structure.c  lir_routing_table_structure.c  mac_netif_rcv_skb.c  network_lir_header.c  network_lir_make_skb.c  network_lir_rcv.c  network_lir_send_check.c  network_opt_path_table.c  network_sk_data.c  rebuild.sh  session_path_table.c  support_ftrace_hook_api.c  support_module_starter.c  transport_lir_udp_sendmsg.c
clion_lkm_dev_advanced_path_validation/: CMakeLists.txt  Makefile  crypto_function.c  cypher_test.c  lir_data_structure.c  lir_routing_table_structure.c  mac_br_handle_frame.c  mac_lir_ip_output.c  netlink_server.c  network_lir_make_skb.c  network_lir_rcv.c  network_lir_send_check.c  rebuild.sh  support_module_starter.c  support_tools.c  transport_lir_udp_rcv.c  transport_lir_udp_sendmsg.c
clion_lkm_dev_advanced_path_validation/headers/: crypto_function.h  cypher_test.h  lir_configuration.h  lir_data_structure.h  lir_routing_table_structure.h  network_lir_header.h  network_lir_make_skb.h  network_lir_rcv.h  support_tools.h
clion_lkm_dev_advanced_path_validation/include/linux/: err.h
clion_lkm_dev_advanced_path_validation/include/net/: ip.h  neighbour.h
clion_lkm_dev_for_attack/: CMakeLists.txt  Makefile  ftrace_hook_api.c  hook_functions.c  hook_tcp_v4_rcv.c  module_starter.c  resolve_function_address.c  self_defined_tcp_rcv_established.c  self_defined_tcp_v4_do_rcv.c  tools.c
clion_lkm_dev_for_attack/headers/: hook_tcp_v4_rcv.h
clion_lkm_dev_for_attack/include/linux/: socket.h
clion_lkm_dev_for_attack/include/uapi/linux/: bpf.h
(+26 files in other folders)
